--- a/schemino-parser/pom.xml
+++ b/schemino-parser/pom.xml
@@ -44,6 +44,8 @@
         <artifactId>antlr4-maven-plugin</artifactId>
         <version>${antlr.version}</version>
         <configuration>
+          <visitor>true</visitor>
+          <listener>true</listener>
           <outputDirectory>src/main/java/</outputDirectory>
         </configuration>
         <executions>
