--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <antlr.version>4.8-1</antlr.version>
     <junit.version>5.6.1</junit.version>
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -94,6 +95,12 @@
             <source>11</source>
             <target>11</target>
           </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
