--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
     <junit.version>5.6.1</junit.version>
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+    <maven-shade.plugin.version>3.2.2</maven-shade.plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -45,6 +47,7 @@
         <artifactId>truffle-api</artifactId>
         <version>${graalvm.version}</version>
       </dependency>
+
       <dependency>
         <groupId>org.graalvm.truffle</groupId>
         <artifactId>truffle-dsl-processor</artifactId>
@@ -101,6 +104,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>${maven-shade.plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
