--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <properties>
     <graalvm.version>20.0.0</graalvm.version>
-    <antlr.version>4.8-1</antlr.version>
+    <antlr.version>4.7.1</antlr.version>
     <junit.version>5.6.1</junit.version>
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
